--- a/src/views/mydemo/mydemo.pug
+++ b/src/views/mydemo/mydemo.pug
@@ -17,16 +17,27 @@ div
     - var text= '<em>文本<em>'
     p= `带有变量的文字${text}`
     //- .语法可以直接换行
-    p.  
+    p.
         这个是一个段纯洁的文本
     //- 这个语法也只能写一个，写两个就报错了
     div  
-        |  管道符总是在最开头，
-        p  不算前面的缩进
-        |  dafadf
+        | 管道符总是在最开头
+        p='这个代码被转义了<em>'
+        | dafadf
+        p 被div包着
     mixin pet(name)
         li= name
     ul  
         +pet('猫猫')
         +pet('狗狗')
         +pet('笨笨')
+
+    button(@click='hash') 打印hash
+    br
+    button(@click='validity')  校验密码
+    br
+    input(data-json=`{"非常": "长的","数据": true}`)
+    //- 这行不会出现在结果里
+    p foo
+    p bar
+
